added get lectors endpoint for user
